--- a/dsek-frontend/package.json
+++ b/dsek-frontend/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "sanitize-html": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
