--- a/dsek-frontend/package.json
+++ b/dsek-frontend/package.json
@@ -11,6 +11,7 @@
         "marked": "^4.2.4",
         "qs": "^6.11.0",
         "react": "^18.2.0",
+        "react-big-calendar": "^1.6.9",
         "react-dom": "^18.2.0",
         "react-google-calendar-api": "^2.1.0",
         "react-icons": "^4.4.0",
