--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "14.2.11",
     "qs": "^6.13.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.4",
