feat: desktop navbar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
       - "3000:3000"
     volumes:
       - ./src:/app/src
+      - ./public:/app/public
     networks:
       - primary
 
