--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "14.2.11",
     "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
