--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ networks:
 
 services:
   db:
-    image: postgres:alpine
+    image: postgres:16-alpine
     environment:
       POSTGRES_USER: $DB_USER
       POSTGRES_DB: $DB_NAME
